--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav class="absolute top-4 right-4 space-x-4">
         <a href="/resume" class="text-blue-600 underline">Resume</a>
         <a href="/cryptic-grove" class="text-blue-600 underline">My Cryptic Grove</a>
+        <a href="https://bento.me/misterxcrypt" class="text-blue-600 underline">My Social Links</a>
     </nav>
     <div class="text-4xl font-bold text-black">Hi, I am Hariharan</div>
 </body>
