--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Hariharan's Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.jpg" sizes="64x64">
+    <link rel="icon" type="image/png" href="assets/favicon2.png" sizes="64x64">
 </head>
 <body class="bg-gray-100 flex flex-col items-center justify-center h-screen">
     <nav class="absolute top-4 right-4 space-x-4">
         <a href="/resume" class="text-blue-600 underline">Resume</a>
-        <a href="/cryptic-grove" class="text-blue-600 underline">My Cryptic Grove</a>
+        <a href="/cryptic-grove" class="text-blue-600 underline">Study Notes</a>
         <a href="https://bento.me/misterxcrypt" class="text-blue-600 underline">My Social Links</a>
     </nav>
     <div class="text-4xl font-bold text-black">Hi, I am Hariharan</div>
