--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hariharan's Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon-black-bg.jpg" sizes="64x64">
+    <link rel="icon" type="image/png" href="assets/favicon-white-bg.svg" sizes="64x64">
 </head>
 <body class="bg-gray-100 flex flex-col items-center justify-center h-screen">
     <nav class="absolute top-4 right-4 space-x-4">
