--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>Hariharan's Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon-black-bg.svg" sizes="64x64">
+    <link rel="icon" type="image/png" href="assets/favicon-black-bg.svg">
     <style>
         .bg-overlay {
             background: url('assets/background.jpg') no-repeat center center/cover;
